GNOME Bugzilla – Bug 794319
omxh26{4,5}enc: don't pick default 10-bit profile
Last modified: 2018-04-26 08:08:47 UTC
.
Created attachment 369652 [details] [review] omxh26{4,5}enc: don't pick default 10-bit profile The OMX stack of the zynqultrascaleplus (the only one supporting NV12_10LE32 and NV16_10LE32) will now pick the proper profile if none has been requested. Best to rely on its default than hardcoding a specific one in gst-omx.
Review of attachment 369652 [details] [review]: Looks good to me
Attachment 369652 [details] pushed as b644699 - omxh26{4,5}enc: don't pick default 10-bit profile