omx/gstomxh265enc.c
@@ -494,19 +494,6 @@ gst_omx_h265_enc_set_format (GstOMXVideoEnc * enc, GstOMXPort * port,
     gst_caps_unref (peercaps);
   }
 
-  /* Change default profile to main-10 if input is 10 bits */
-  if (profile == OMX_VIDEO_HEVCProfileUnknown) {
-    GstVideoFormat format;
-
-    format = state->info.finfo->format;
-    if (format == GST_VIDEO_FORMAT_NV12_10LE32 ||
-        format == GST_VIDEO_FORMAT_NV16_10LE32) {
-      GST_DEBUG_OBJECT (self,
-          "Set profile to main-10 as input is a 10 bits format");
-      profile = OMX_VIDEO_HEVCProfileMain10;
-    }
-  }
-
   if (profile != OMX_VIDEO_HEVCProfileUnknown
       || level != OMX_VIDEO_HEVCLevelUnknown) {
     /* OMX provides 2 API to set the profile and level. We try using the
